2009-06-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#118133 - Icon for Maemo in Add bookmark of Desktop menu is
	large in size

	* src/hd-bookmark-manager.c (hd_bookmark_manager_add_bookmark_item):
	Scale images to correct size in "Add bookmark" dialog.

	* src/notification-groups.conf: Add definition for class 0 sms message
	category.

	* debian/changelog: Update.

2009-06-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.30

	* configure.ac: 0.3.30

2009-05-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#112313 - Required implementation details for attaching
	message notifications to thumbnails in task switcher by thread.
	Fixes: NB#98543 - SMS/Chat notification received in switcher view for
	currently running task is not as expected

	* src/hd-incoming-event-window.c: Use relative time instead of
	absolute time for display.

	* src/hd-incoming-events.c: Changed incoming event display. Add
	support for splitting in threads. Add support for amount hint.

	* src/notification-groups.conf: Changed incoming event display.

	* src/test-incoming-event.c (main): Add current time.

	* src/test-notifications.py (emit_notification): Add threading test.

	* debian/changelog: Update.

2009-05-26  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.29

	* configure.ac: 0.3.29

2009-05-26  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#118744 - Time is not shown on previews and notifications.

	* src/hd-incoming-event-window.c
	  (hd_incoming_event_window_set_property): Fix.

2009-05-25  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu): Use
	5 min timeout for D-Bus call.

	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_changed_cb):
	Fix missing icons.

2009-05-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.28

	* configure.ac: 0.3.28

2009-05-21  Jan Arne Petersen  <jpetersen@openismus.com>
