@@ -299,6 +299,39 @@ hd_incoming_event_window_update_time (HDIncomingEventWindow *window)
 }
 
 static void
+hd_incoming_event_window_update_title_and_amount (HDIncomingEventWindow *window)
+{
+  HDIncomingEventWindowPrivate *priv = window->priv;
+
+  if (priv->amount > 1)
+    {
+      gchar *display_amount, *title;
+
+      display_amount = g_strdup_printf ("%lu", priv->amount);
+      title = g_strdup_printf ("... %s", gtk_label_get_text (GTK_LABEL (priv->title)));
+
+      hd_incoming_event_window_set_string_xwindow_property (GTK_WIDGET (window),
+                                                            "_HILDON_INCOMING_EVENT_NOTIFICATION_AMOUNT",
+                                                            display_amount);
+      hd_incoming_event_window_set_string_xwindow_property (GTK_WIDGET (window),
+                                                            "_HILDON_INCOMING_EVENT_NOTIFICATION_SUMMARY",
+                                                            title);
+
+      g_free (display_amount);
+      g_free (title);
+    }
+  else
+    {
+      hd_incoming_event_window_set_string_xwindow_property (GTK_WIDGET (window),
+                                                            "_HILDON_INCOMING_EVENT_NOTIFICATION_AMOUNT",
+                                                            NULL);
+      hd_incoming_event_window_set_string_xwindow_property (GTK_WIDGET (window),
+                                                            "_HILDON_INCOMING_EVENT_NOTIFICATION_SUMMARY",
+                                                            gtk_label_get_text (GTK_LABEL (priv->title)));
+    }
+}
+
+static void
 hd_incoming_event_window_realize (GtkWidget *widget)
 {
   HDIncomingEventWindowPrivate *priv = HD_INCOMING_EVENT_WINDOW (widget)->priv;
@@ -347,24 +380,7 @@ hd_incoming_event_window_realize (GtkWidget *widget)
                           "_HILDON_INCOMING_EVENT_NOTIFICATION_DESTINATION",
                           priv->destination);
   hd_incoming_event_window_update_time (HD_INCOMING_EVENT_WINDOW (widget));
-  if (priv->amount > 1)
-    {
-      gchar *display_amount;
-
-      display_amount = g_strdup_printf ("%lu", priv->amount);
-
-      hd_incoming_event_window_set_string_xwindow_property (widget,
-                                                            "_HILDON_INCOMING_EVENT_NOTIFICATION_AMOUNT",
-                                                            display_amount);
-
-      g_free (display_amount);
-    }
-  else
-    {
-      hd_incoming_event_window_set_string_xwindow_property (widget,
-                                                            "_HILDON_INCOMING_EVENT_NOTIFICATION_AMOUNT",
-                                                            NULL);
-    }
+  hd_incoming_event_window_update_title_and_amount (HD_INCOMING_EVENT_WINDOW (widget));
 
   /* Set background to transparent pixmap */
   pixmap = gdk_pixmap_new (GDK_DRAWABLE (widget->window), 1, 1, -1);
@@ -518,10 +534,7 @@ hd_incoming_event_window_set_property (GObject      *object,
 
     case PROP_TITLE:
       gtk_label_set_text (GTK_LABEL (priv->title), g_value_get_string (value));
-      hd_incoming_event_window_set_string_xwindow_property (
-                          GTK_WIDGET (object),
-                          "_HILDON_INCOMING_EVENT_NOTIFICATION_SUMMARY",
-                          g_value_get_string (value));
+      hd_incoming_event_window_update_title_and_amount (HD_INCOMING_EVENT_WINDOW (object));
       break;
 
     case PROP_TIME:
@@ -531,6 +544,7 @@ hd_incoming_event_window_set_property (GObject      *object,
 
     case PROP_AMOUNT:
       priv->amount = g_value_get_ulong (value);
+      hd_incoming_event_window_update_title_and_amount (HD_INCOMING_EVENT_WINDOW (object));
       if (priv->amount > 1)
         {
           gchar *display_amount;
@@ -539,20 +553,10 @@ hd_incoming_event_window_set_property (GObject      *object,
           gtk_label_set_text (GTK_LABEL (priv->amount_label),
                               display_amount);
 
-          hd_incoming_event_window_set_string_xwindow_property (GTK_WIDGET (object),
-                                                                "_HILDON_INCOMING_EVENT_NOTIFICATION_AMOUNT",
-                                                                display_amount);
-
           g_free (display_amount);
         }
       else
-        {
-          gtk_label_set_text (GTK_LABEL (priv->amount_label), "");
-
-          hd_incoming_event_window_set_string_xwindow_property (GTK_WIDGET (object),
-                                                                "_HILDON_INCOMING_EVENT_NOTIFICATION_AMOUNT",
-                                                                NULL);
-        }
+        gtk_label_set_text (GTK_LABEL (priv->amount_label), "");
       break;
 
     case PROP_MESSAGE:
