@@ -1,3 +1,15 @@
+2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-change-background-dialog.c
+	  (hd_change_background_dialog_constructed): Support image sets in
+	  ~/MyDocs/.images
+
+	* src/hd-incoming-event-window.c
+	  (hd_incoming_event_window_update_title_and_amount,
+	  hd_incoming_event_window_realize,
+	  hd_incoming_event_window_set_property): Add "... " suffix to title
+	  of multiple notifications in task switcher.
+
 2009-06-02  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#118133 - Icon for Maemo in Add bookmark of Desktop menu is
